--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --social-icon-color:#AFB1B8 ;
   --social-icon-hover-color:#2196F3 ;
   --brand-color: #212121;
-  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -37,6 +37,10 @@ ul {
     padding: 0 15px;
     margin: 0 auto;
 } 
+
+a {
+  transition: color var(--transition);
+}
 
 /*--------------HEADER-----------*/
 .header {
@@ -67,7 +71,6 @@ ul {
   padding: 24px 0;
   letter-spacing: 0.28px;
   display: block;
-  transition: var(--transition);
   text-decoration:none;
 }
 .header-link:hover,
@@ -100,12 +103,12 @@ ul {
   font-weight: 500;
   letter-spacing: 0.28px;
   align-items: center;
-  transition: var(--transition);
   text-decoration:none;
 }
 .header-cont-link:hover,
 .header-cont-link:focus {
   color: #2196f3;
+  transition: color var(--transition);
 }
 .contact-adress-icon { color: var(--social-icon-color);
 
@@ -158,12 +161,14 @@ ul {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   display: flex;
   margin: 0 auto;
-  transition: color var(--transition);
+
 
 }
 .book-a-service-btn:hover,
 .book-a-service-btn:focus {
   background-color: #006994;
+  transition:color var(--transition);
+ 
 }
 
 /*-------------Main Services----------------*/
@@ -216,6 +221,31 @@ ul {
   display: flex;
   gap: 30px;
   margin-top: 50px;
+}
+.motto-cards-elements {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 370px; 
+  margin: 0 auto;
+}
+.overlay-text {
+  position: absolute;
+  bottom: 0;
+  color: #f1f1f1;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin:0 auto;
+  color: #FFF;
+  font-family: var(--text-font-family);
+  font-size: 14px;
+  letter-spacing: 0.42px;
+  text-transform: uppercase; 
 }
 /*--------------TEAM-----------------*/
 .team-section {
@@ -275,7 +305,6 @@ ul {
   justify-content: center;
   align-items: center;
   fill: var(--social-icon-color);
-  transition: var(--transition);
 }
 .icons-list .icon:hover,
 .icons-list .icon:focus {
@@ -392,8 +421,7 @@ text-transform: uppercase;
   fill: #ffffff;
   padding: 12px;
   margin-top: 20px;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 .footer-soc-list {
@@ -423,8 +451,7 @@ text-transform: uppercase;
   gap: 24px;
   justify-content: center;
   margin-bottom: 50px;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ transition: color var(--transition);
 }
 .portofolio-button {
   font-size: 16px;
@@ -439,8 +466,7 @@ text-transform: uppercase;
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   cursor: pointer;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ 
  
 }
 .portofolio-button:hover,
@@ -449,6 +475,7 @@ text-transform: uppercase;
   color: #ffffff;
   border: 1px solid transparent;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
+  transition: color var(--transition);
 }
 .portfol-list-item {
   width: calc((100% - 60px) / 3);
@@ -487,6 +514,7 @@ text-transform: uppercase;
 }
 .portofolio-box:hover,
 .portofolio-box:focus { box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  transition: color var(--transition);
 }
 
 /*....Modal...*/
@@ -500,6 +528,7 @@ text-transform: uppercase;
   justify-content: center;
   align-items: center;
   transition: opacity var(--transition), visibility var(--transition);
+  
 }
 
 
@@ -519,7 +548,7 @@ text-transform: uppercase;
   pointer-events: none;
 }
 .close-btn {
-  border: 1px solid white;
+  border: 5px solid white;
   color: #000000;
   cursor: pointer;
   outline: none;
@@ -529,9 +558,15 @@ text-transform: uppercase;
   border-radius: 8px;
   width: 30px;
   height: 30px;
-  border-radius: 4px ;
+  border-radius: 50% ;
   background: #FFF;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+
+
 
