--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ ul {
 }
   .container {
     width: 100%;
-    max-width: 1158px;
+    max-width: 100px;
     padding: 0 15px;
     margin: 0 auto;
 } 
@@ -178,12 +178,10 @@ ul {
   justify-content: center;
   align-items: center;
   margin-bottom: 55px;
-border-radius: 4px;
-background: #F5F4FA;
-padding: 25px 0;
+  border-radius: 4px;
+  background: #F5F4FA;
+  padding: 25px 0;
 }
-
-
 .services-list {
   display: flex;
   gap: 30px;
@@ -431,6 +429,7 @@ align-items: center;
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   background: #f5f4fa;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 .portofolio-button:hover,
 .portofolio-button:focus {
@@ -440,12 +439,9 @@ align-items: center;
 .portofolio-images {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  padding-top: 50px;
-  padding-bottom: 94px;
   gap: 20px;
-  width: 100%;
 }
+
 .portofolio-tittle {
   color: #212121;
   font-size: 18px;
@@ -466,4 +462,26 @@ align-items: center;
 .portofolio-box {
   border: 1px solid #eee;
   border-top: none;
+}
+.overlay-layer{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+.overlay-text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  padding: 40px 32px;
+  background-color: #008CBA;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform var(--transition);
 }
