--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --social-icon-color:#AFB1B8 ;
   --social-icon-hover-color:#2196F3 ;
   --brand-color: #212121;
-  --transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -40,6 +40,7 @@ ul {
 
 a {
   transition: color var(--transition);
+  text-decoration: none;
 }
 
 /*--------------HEADER-----------*/
@@ -95,7 +96,6 @@ a {
   gap: 40px;  
 
 }
-
 .header-cont-link {
   color: var(--link-color);
   font-size: 14px;
@@ -111,17 +111,29 @@ a {
   transition: color var(--transition);
 }
 .contact-adress-icon { color: var(--social-icon-color);
-
 }
 .contact-adress-icon {
   width: 16px;
   height: 16px;
   align-items: center;
-
 }
 .contact-adress-icon:hover,
 .contact-adress-icon:focus {
   color: var(--social-icon-hover-color);
+}
+.current {
+  position: relative;
+  color: #2196F3;
+}
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: -1px;
+  height: 4px;
+  background: #2196F3;
+  border-radius: 2px;
+  width: 100%;
 }
 
 /*---------------------HERO----------------------***/
@@ -147,7 +159,6 @@ a {
   margin: 0 auto;
 }
 .book-a-service-btn {
-  
   color: #fff;
   text-align: center;
   font-size: 16px;
@@ -161,14 +172,11 @@ a {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   display: flex;
   margin: 0 auto;
-
-
 }
 .book-a-service-btn:hover,
 .book-a-service-btn:focus {
   background-color: #006994;
-  transition:color var(--transition);
- 
+  transition: color var(--transition);
 }
 
 /*-------------Main Services----------------*/
@@ -230,7 +238,8 @@ a {
   width: 370px; 
   margin: 0 auto;
 }
-.overlay-text {
+
+.service-img-title {
   position: absolute;
   bottom: 0;
   color: #f1f1f1;
@@ -312,7 +321,7 @@ a {
   border-radius: 22px;
   background-color: var(--social-icon-hover-color);
   fill: var(--social-bacground-icon-color);
-
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icons-list .icon svg {
   width: 20px;
@@ -374,7 +383,6 @@ a {
   display: inline-block;
   margin-bottom: 28px;
   text-decoration:none;
- 
 }
 .footer-half-logo {
   color: #2196f3;
@@ -421,8 +429,6 @@ text-transform: uppercase;
   fill: #ffffff;
   padding: 12px;
   margin-top: 20px;
-
-
 }
 .footer-soc-list {
  display: flex;
@@ -434,13 +440,15 @@ text-transform: uppercase;
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 .footer-item-icons:hover,
 .footer-item-icons:focus {
   background-color: #2196F3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*!----------------------PORTFOLIO--------------------------!*/
+/*!------------------PORTOFOLIO--------------------!*/
 
 .main-portofolio {
   padding-top: 132px;
@@ -451,7 +459,7 @@ text-transform: uppercase;
   gap: 24px;
   justify-content: center;
   margin-bottom: 50px;
- transition: color var(--transition);
+  transition: color var(--transition);
 }
 .portofolio-button {
   font-size: 16px;
@@ -466,8 +474,6 @@ text-transform: uppercase;
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   cursor: pointer;
- 
- 
 }
 .portofolio-button:hover,
 .portofolio-button:focus {
@@ -475,11 +481,7 @@ text-transform: uppercase;
   color: #ffffff;
   border: 1px solid transparent;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
-  transition: color var(--transition);
-}
-.portfol-list-item {
-  width: calc((100% - 60px) / 3);
-  position: relative;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portofolio-images {
   display: flex;
@@ -510,11 +512,49 @@ text-transform: uppercase;
   border: 1px solid #eee;
   border-top: none;
   width: 100%;
-  
 }
 .portofolio-box:hover,
 .portofolio-box:focus { box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   transition: color var(--transition);
+}
+/*...Overlayers Images...*/
+
+.link-portofolio {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link-portofolio:hover,
+.link-portofolio:focus {
+  transform: translateY(0%);
+}
+.link-portofolio:hover .overlay-text,
+.link-portofolio:focus .overlay-text{
+  transform: translateY(0%);
+  background: #2196F3;
+}
+
+.overlay-port {
+  position: relative;
+  overflow: hidden;
+}
+.scroll {
+  position: relative;
+
+}
+.overlay-text {
+  position: absolute;
+  top: 0;
+  color: #f1f1f1;
+  font-family: var(--text-font-family);
+  line-height: 1.5;
+  font-size: 14px;
+  letter-spacing: 0.42px;
+  text-transform: uppercase; 
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px 91px;
+  transform: translateY(100%);
+  transition: transform var(--transition);
 }
 
 /*....Modal...*/
@@ -528,10 +568,7 @@ text-transform: uppercase;
   justify-content: center;
   align-items: center;
   transition: opacity var(--transition), visibility var(--transition);
-  
 }
-
-
 .modal-content {
   padding: 16px;
   background-color: #fff;
@@ -539,7 +576,6 @@ text-transform: uppercase;
   margin: 0 auto;
   height: 500px;
   position: relative;
-
 }
 
 .is-hidden {
@@ -566,7 +602,5 @@ text-transform: uppercase;
   justify-content: center;
   align-items: center;
 }
-
-
 
 
