--- a/styles.css
+++ b/styles.css
@@ -463,22 +463,18 @@ align-items: center;
   border: 1px solid #eee;
   border-top: none;
 }
+
 .overlay-layer{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #008CBA;
+  position: relative;
   overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: .5s ease;
 }
+
 .overlay-text {
+  position: absolute;
+content: '';
+top: 0;
   color: white;
   font-size: 20px;
-  position: absolute;
-  padding: 40px 32px;
   background-color: #008CBA;
   width: 100%;
   height: 100%;
